--- a/home.html
+++ b/home.html
@@ -1,14 +1,216 @@
 <!doctype html>
-
-<html>
-  <head>
-    <title>INSERT TITLE HERE!</title>
-    <link rel="stylesheet" href="index.css">
-    <!-- TODO: add additional links here! e.g. fonts, icons, more stylesheets, etc. -->
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
-  </head>
-
-  <body>
-    <!-- TODO: put your HTML code here! -->
-  </body>
+<html lang="en">
+   <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+      <title>EcQuality Auto Detailing</title>
+      <link rel="stylesheet" href="bootstrap.min.css">
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+         rel="stylesheet">
+      <link href="index.css" rel="stylesheet">
+      <!-- Custom styles for this template -->
+   </head>
+   <body class="bg-light">
+     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+         <span class="navbar-toggler-icon"></span>
+       </button>
+       <div class="collapse navbar-collapse" id="navbarNav">
+         <ul class="navbar-nav mr-auto">
+           <li class="nav-item">
+             <a class="nav-link" href="#">Home</a>
+           </li>
+           <li class="nav-item active">
+             <a class="nav-link" href="#">Services <span class="sr-only">(current)</span></a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link" href="#">Locations</a>
+           </li>
+           <li class="nav-item">
+             <a class="nav-link " href="#">Contact</a>
+           </li>
+         </ul>
+         <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link" href="#">Login &nbsp; <i class="material-icons">portrait</i></a>
+            </li>
+        </ul>
+       </div>
+     </nav>
+      <h2 class="display-4 text-center">EcQuality</h2>
+      <h5 class="display-5 text-center text-muted">Auto Detailing</h5>
+      <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light" id="dashboard_img">
+         <br>
+         <br>
+         <br>
+         <h1 class="display-4 font-weight-normal text-center">Give your Car the Treatment it Deserves</h1>
+         <br>
+         <br>
+         <br>
+         <br>
+      </div>
+      <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+         <div class="mr-md-3 pt-3 px-3 pt-md-5 px-md-4 text-center text-white overflow-hidden">
+            <img src="backgroundOne.jpg" alt="picture1" />
+         </div>
+         <div class="bg-light mr-md-1 pt-3 px-1 pt-md-3 px-md-4 overflow-hidden">
+            <h4 class="text-center">Auto Detail Services </h4>
+            <hr class="text-center">
+            <p class="text-center">Our details are designed for maximum interior and exterior cleaning for clients who need a refreshed car. Each detail comes with a dedicated team to address all your needs.</p>
+            <div class="accordion" id="accordionExample">
+               <div class="card">
+                  <div class="card-header" id="headingOne">
+                     <h5 class="mb-0">
+                        <button class="dropdown btn collapsed" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true">
+                        Deluxe Detail <i class="material-icons">keyboard_arrow_down</i>
+                        </button>
+                     </h5>
+                  </div>
+                  <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
+                     <div class="card-body">
+                        <p>With our Deluxe package your car reciesves a 100% hand wash, interior vacuum, interior wipe down and your choice between a wax of floor mats shampooed.</p>
+                        <p> Sedan $49.99 | SUV $59.99 </p>
+                     </div>
+                  </div>
+               </div>
+               <div class="card">
+                  <div class="card-header" id="headingTwo">
+                     <h5 class="mb-0">
+                        <button class="dropdown btn" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false">
+                        Ultimate Detail <i class="material-icons">keyboard_arrow_down</i>
+                        </button>
+                     </h5>
+                  </div>
+                  <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                     <div class="card-body">
+                        <p>Includes a 100% hand rubbed wax, vacuum, interior carpet and floor mats shampoo. Followed by a leather, vinyl, and plastic treatment</p>
+                        <p> Sedan $49.99 | SUV $59.99 </p>
+                     </div>
+                  </div>
+               </div>
+               <div class="card">
+                  <div class="card-header" id="headingThree">
+                     <h5 class="mb-0">
+                        <button class="dropdown btn" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false">
+                        EcQuality Detail <i class="material-icons">keyboard_arrow_down</i>
+                        </button>
+                     </h5>
+                  </div>
+                  <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                     <div class="card-body">
+                        <p>Includes eventhing in an Ultimate detail plus we include a complete clay bar treatment which removes all surfaces contaminates, followed by a hand rubbed wax</p>
+                        <p> Sedan $49.99 | SUV $59.99 </p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+            <br>
+            <div class="text-center">
+               <button type="button" class="btn btn-primary pt-1">Book Now
+               </button>
+            </div>
+            <br>
+            <br>
+         </div>
+      </div>
+      <div class="d-md-flex flex-row-reverse flex-md-equal w-100 my-md-3 pl-md-3">
+         <div class="mr-md-3 pt-3 px-3 pt-md-5 px-md-4 text-center text-white overflow-hidden">
+            <img src="picture2.jpg" alt="picture2" />
+         </div>
+         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 overflow-hidden">
+            <h4 class="text-center">Premium Packages</h4>
+            <hr class="text-center">
+            <p class="text-center"> Our premium packages are designed for those who want the ultimate -- from top to bottom -- experience for themselves and their cars.</p>
+            <div class="accordion" id="accordionExample2">
+               <div class="card">
+                  <div class="card-header" id="headingFour">
+                     <h5 class="mb-0">
+                        <button class="dropdown btn collapsed" type="button" data-toggle="collapse" data-target="#collapseFour" aria-expanded="true">
+                        EcQuality Gold <i class="material-icons">keyboard_arrow_down</i>
+                        </button>
+                     </h5>
+                  </div>
+                  <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample2">
+                     <div class="card-body">
+                        <p>The interior is given a top-of-the-line cleaning nad plastic conditioning treatment, while the outside is given a full clay bar treatment, high-speed polish, and complete clean of all accessories.</p>
+                        <p> Sedan $399.99 | SUV $449.99</p>
+                     </div>
+                  </div>
+               </div>
+               <div class="card">
+                  <div class="card-header" id="headingFive">
+                     <h5 class="mb-0">
+                        <button class="dropdown btn " type="button" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false">
+                        Platinum Package <i class="material-icons">keyboard_arrow_down</i>
+                        </button>
+                     </h5>
+                  </div>
+                  <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample2">
+                     <div class="card-body">
+                        <p>Comes with the same treatments offered in an EcQuality Gold Treatment along with a high-end buff that's designed to take out micro scratches and minor swirl marks and enhances depth of color on the body.
+                          This treatment is finished with a two part polymer and gloss sealant which enhances overall shine.  Superior engine cleaning, headlight restoration and plastic revival. </p>
+                        <p> Sedan $599.99 | SUV $649.99</p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+            <br>
+            <div class="text-center">
+               <button type="button" class="btn btn-primary pt-1">Book Now
+               </button>
+            </div>
+         </div>
+      </div>
+      <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
+         <div class="mr-md-3 pt-3 px-3 pt-md-5 px-md-4 text-center text-white overflow-hidden">
+            <img src="picture3.jpg" alt="picture3"/>
+         </div>
+         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 overflow-hidden">
+            <h4 class="text-center">Membership Options</h4>
+            <hr class="text-center">
+            <p class="text-center">Membership options exist for our members who are always on the go an need a little help keeping their automobiles clean.</p>
+            <div class="accordion" id="accordionExample3">
+               <div class="card">
+                  <div class="card-header" id="headingSix">
+                     <h5 class="mb-0">
+                        <button class="dropdown btn" type="button" data-toggle="collapse" data-target="#collapseSix" aria-expanded="true">
+                        Gold Membership <i class="material-icons">keyboard_arrow_down</i>
+                        </button>
+                     </h5>
+                  </div>
+                  <div id="collapseSix" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample3">
+                     <div class="card-body">
+                        <p>Your vehicle receives a 100% hand wash, interior vacuum and wipe down of the dash, center console, interior and exterior windows cleaned, as well as rims and tire dressing. Free wash once a week, along with valet service </p>
+                        <p> Sedan $59.99 | SUV $69.99 </p>
+                     </div>
+                  </div>
+               </div>
+               <div class="card">
+                  <div class="card-header" id="headingSeven">
+                     <h5 class="mb-0">
+                        <button class="dropdown btn" type="button" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false">
+                        EcQuality Membership <i class="material-icons">keyboard_arrow_down</i>
+                        </button>
+                     </h5>
+                  </div>
+                  <div id="collapseSeven" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample3">
+                     <div class="card-body">
+                       <p>Comes with the same amenities as the gold package, expecpt members have the luxury of Unlimited Washes 7 days a week, along with complimentary immediate service! </p>
+                       <p> Sedan $89.99 | SUV $99.99 </p>
+                     </div>
+                  </div>
+               </div>
+            </div>
+            <br>
+            <div class="text-center">
+               <button type="button" class="btn btn-primary pt-1">Book Now
+               </button>
+            </div>
+         </div>
+      </div>
+      <footer class="container py-5">
+      </footer>
+   </body>
 </html>
